--- a/comworkview.ui
+++ b/comworkview.ui
@@ -7,24 +7,24 @@
     <x>0</x>
     <y>0</y>
     <width>245</width>
-    <height>451</height>
+    <height>489</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout_8">
+  <layout class="QVBoxLayout" name="verticalLayout_3">
    <property name="leftMargin">
-    <number>3</number>
+    <number>5</number>
    </property>
    <property name="topMargin">
-    <number>3</number>
+    <number>5</number>
    </property>
    <property name="rightMargin">
-    <number>3</number>
+    <number>5</number>
    </property>
    <property name="bottomMargin">
-    <number>3</number>
+    <number>5</number>
    </property>
    <item>
     <widget class="QGroupBox" name="groupBox">
@@ -72,10 +72,45 @@ color: rgb(136, 136, 136);
            </widget>
           </item>
           <item>
-           <widget class="QCheckBox" name="crCheckBox">
-            <property name="text">
-             <string>Add &lt;CR&gt;</string>
+           <spacer name="horizontalSpacer">
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
             </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>40</width>
+              <height>20</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
+          <item>
+           <widget class="QComboBox" name="eolCharComboBox">
+            <item>
+             <property name="text">
+              <string>EOL: &lt;LF&gt;</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>EOL: &lt;CR&gt;</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>EOL: &lt;CR+ LF&gt;</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>EOL: &lt;LF+ CR&gt;</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>Don't Add EOL</string>
+             </property>
+            </item>
            </widget>
           </item>
          </layout>
@@ -93,6 +128,19 @@ color: rgb(136, 136, 136);
        </layout>
       </item>
       <item>
+       <spacer name="verticalSpacer_2">
+        <property name="orientation">
+         <enum>Qt::Vertical</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>20</width>
+          <height>40</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item>
        <layout class="QVBoxLayout" name="verticalLayout_4">
         <item>
          <widget class="QLabel" name="label_5">
@@ -103,6 +151,9 @@ color: rgb(136, 136, 136);
         </item>
         <item>
          <widget class="QLineEdit" name="respLineEdit">
+          <property name="text">
+           <string/>
+          </property>
           <property name="alignment">
            <set>Qt::AlignCenter</set>
           </property>
@@ -120,15 +171,21 @@ color: rgb(136, 136, 136);
         </item>
         <item>
          <widget class="QLineEdit" name="respLineEditHex">
+          <property name="text">
+           <string/>
+          </property>
           <property name="alignment">
            <set>Qt::AlignCenter</set>
+          </property>
+          <property name="readOnly">
+           <bool>true</bool>
           </property>
          </widget>
         </item>
        </layout>
       </item>
       <item>
-       <spacer name="verticalSpacer_2">
+       <spacer name="verticalSpacer_3">
         <property name="orientation">
          <enum>Qt::Vertical</enum>
         </property>
@@ -153,6 +210,9 @@ color: rgb(136, 136, 136);
          <layout class="QHBoxLayout" name="horizontalLayout_5">
           <item>
            <widget class="QSpinBox" name="pollPeridSpinbox">
+            <property name="alignment">
+             <set>Qt::AlignCenter</set>
+            </property>
             <property name="minimum">
              <number>1</number>
             </property>
@@ -176,7 +236,7 @@ color: rgb(136, 136, 136);
        </layout>
       </item>
       <item>
-       <spacer name="verticalSpacer_3">
+       <spacer name="verticalSpacer_4">
         <property name="orientation">
          <enum>Qt::Vertical</enum>
         </property>
@@ -247,7 +307,63 @@ color: rgb(136, 136, 136);
        </layout>
       </item>
       <item>
-       <spacer name="verticalSpacer_4">
+       <spacer name="verticalSpacer_5">
+        <property name="orientation">
+         <enum>Qt::Vertical</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>20</width>
+          <height>40</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item>
+       <widget class="QPushButton" name="singleButton">
+        <property name="text">
+         <string>Single Send</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <spacer name="verticalSpacer_6">
+        <property name="orientation">
+         <enum>Qt::Vertical</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>20</width>
+          <height>40</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item>
+       <widget class="QGroupBox" name="groupBox_2">
+        <property name="title">
+         <string>On Receive Action</string>
+        </property>
+        <layout class="QHBoxLayout" name="horizontalLayout_2">
+         <item>
+          <widget class="QCheckBox" name="writeFileCheckBox">
+           <property name="text">
+            <string>Write to file</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QCheckBox" name="deleteEolCheckBox">
+           <property name="text">
+            <string>Delete EOL</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </widget>
+      </item>
+      <item>
+       <spacer name="verticalSpacer_7">
         <property name="orientation">
          <enum>Qt::Vertical</enum>
         </property>
