--- a/tcpworkview.ui
+++ b/tcpworkview.ui
@@ -104,17 +104,17 @@ color: rgb(136, 136, 136);
             </item>
             <item>
              <property name="text">
-              <string>EOL: &lt;CR+ LF&gt;</string>
+              <string>EOL: &lt;CR/LF&gt;</string>
              </property>
             </item>
             <item>
              <property name="text">
-              <string>EOL: &lt;LF+ CR&gt;</string>
+              <string>EOL: &lt;LF/CR&gt;</string>
              </property>
             </item>
             <item>
              <property name="text">
-              <string>Don't  Add EOL</string>
+              <string>EOL: None</string>
              </property>
             </item>
            </widget>
@@ -124,7 +124,7 @@ color: rgb(136, 136, 136);
         <item>
          <widget class="QLineEdit" name="reqLineEdit">
           <property name="text">
-           <string>TCP Test Communication String</string>
+           <string>TCP communication test string</string>
           </property>
           <property name="alignment">
            <set>Qt::AlignCenter</set>
