--- a/tcpportview.ui
+++ b/tcpportview.ui
@@ -155,6 +155,12 @@ color: rgb(136, 136, 136);
           <property name="checkable">
            <bool>false</bool>
           </property>
+          <property name="autoDefault">
+           <bool>true</bool>
+          </property>
+          <property name="default">
+           <bool>false</bool>
+          </property>
          </widget>
         </item>
        </layout>
